[gd_scene load_steps=4 format=3 uid="uid://p42st2s5b6o3"]

[ext_resource type="Script" path="res://Scripts/UI/Educational/wiki_magic.gd" id="1_0tkxl"]
[ext_resource type="PackedScene" uid="uid://pfnqgp6b3k1u" path="res://Scenes/UI/Wiki/wiki_symbol_button.tscn" id="2_jq46o"]
[ext_resource type="Texture2D" uid="uid://nqopde6ucyqy" path="res://Art/items/big_sword.png" id="3_7v3u2"]

[node name="WikiMagic" type="Panel"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_0tkxl")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Title" type="Label" parent="Margin/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Symbols"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Scroll" type="ScrollContainer" parent="Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll"]
custom_minimum_size = Vector2(800, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox"]
layout_mode = 2

[node name="Column1" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SymbolButton" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column1" instance=ExtResource("2_jq46o")]
layout_mode = 2

[node name="SymbolButton2" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column1" instance=ExtResource("2_jq46o")]
layout_mode = 2

[node name="Column2" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SymbolButton3" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column2" instance=ExtResource("2_jq46o")]
layout_mode = 2

[node name="SymbolButton4" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column2" instance=ExtResource("2_jq46o")]
layout_mode = 2

[node name="Column3" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SymbolButton3" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column3" instance=ExtResource("2_jq46o")]
layout_mode = 2

[node name="SymbolButton4" parent="Margin/VBoxContainer/HBoxContainer/Scroll/VBox/HBoxContainer/Column3" instance=ExtResource("2_jq46o")]
layout_mode = 2

[node name="Control" type="Control" parent="Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SpellInformationContainer" type="ScrollContainer" parent="Margin/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="Margin/VBoxContainer/HBoxContainer/SpellInformationContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WeaponName" type="Label" parent="Margin/VBoxContainer/HBoxContainer/SpellInformationContainer/VBox"]
layout_mode = 2
text = "Big Sword"
horizontal_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Margin/VBoxContainer/HBoxContainer/SpellInformationContainer/VBox"]
layout_mode = 2
text = "Attack  : 2
Defense : 1

Tags:
- Parry"
fit_content = true

[node name="TextureRect" type="TextureRect" parent="Margin/VBoxContainer/HBoxContainer/SpellInformationContainer/VBox"]
custom_minimum_size = Vector2(100, 400)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_7v3u2")
expand_mode = 1
